--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
-  <div class="user">
+<!--   <div class="user">
     <div class="tech">
       <h2>Design</h2>
       <i class="devicon-html5-plain-wordmark"></i>
@@ -26,5 +26,5 @@
       <i class="devicon-atom-original-wordmark"></i>
       <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
         Vinyl XOXO lumbersexual</p>
-    </div>
+    </div> -->
 </div>
