--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,18 +3,20 @@
 </div>
 <div class="user-projects">
   <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+    <img alt="RISCV" src="{{ "/assets/img/RISCV.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
-    <h3> Project Title </h3>
+    <h3> Front-End Design for RISC-V Microcontroller Application-Specific Integrated Circuit (ASIC) </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li> Verilog Hardware Description Language </li>
+      <li> Vivado Design Suite by Xilinx </li>
+      <li> Project Management </li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p>We designed a general purpose RISC-V based chip for educational purposes. The chip is able to load and execute code compiled to RISC-V machine language by a separate computer. The chip has 16 General Purpose Input Output pins that can be used for interaction.</p>
+    <a class="project-link" href="https://frontendchip2017.pages.tcnj.edu/">Check it out</a>
   </div>
 </div>
-<div class="user-projects">
+<!-- <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
   </div>
@@ -27,3 +29,4 @@
     <a class="project-link" href="#">Check it out</a>
   </div>
 </div>
+ -->
