--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,11 @@
 <div class="user-details">
   <h1> Featured Projects </h1>
 </div>
+
+
 <div class="user-projects">
   <div class="images-right">
-    <img alt="RISCV" src="{{ "/assets/img/RISCV.png" | prepend: site.baseurl }}" />
+    <img alt="RISCV" src="{{ "/assets/img/RISCV.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents">
     <h3> Front-End Design for RISC-V Microcontroller Application-Specific Integrated Circuit (ASIC) </h3>
@@ -13,20 +15,25 @@
       <li> Project Management </li>
     </ul>
     <p>We designed a general purpose RISC-V based chip for educational purposes. The chip is able to load and execute code compiled to RISC-V machine language by a separate computer. The chip has 16 General Purpose Input Output pins that can be used for interaction.</p>
-    <a class="project-link" href="https://frontendchip2017.pages.tcnj.edu/">Check it out</a>
+    <a class="project-link" href="http://frontendchip2017.pages.tcnj.edu/">Check it out</a>
   </div>
 </div>
-<!-- <div class="user-projects">
+
+
+<div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+    <img alt="The Indie Accord" src="{{ "/assets/img/TIAController.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Project Title </h3>
+    <h3> The Indie Accord </h3>
     <ul>
-      <li> Featured Skills</li>
+      <li>Project Management</li>
+      <li>Agile Methodology</li>
+      <li>Unity 3D</li>
     </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
+    <p><i>The Games of Today, Tomorrow!</i>
+      <br>
+    Project management experience with an agile development team. We build and maintain relations with both internal and external conections. Organize and manage standup meetings and performs the role of scrum master of our kanban board task list.</p>
+    <a class="project-link" href="http://theindieaccord.com">Check it out</a>
   </div>
 </div>
- -->
