--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,29 +2,31 @@
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
 </div>
-<!--   <div class="user">
+  <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>Organization</h2>
+      <i class="devicon-trello-plain-wordmark colored"></i>
+      <i class="devicon-slack-plain-wordmark colored"></i>
+      <i class="devicon-confluence-plain colored"></i>
+      <p>Core applications for making things happen.</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <i class="devicon-c-plain colored"></i>
+      <i class="devicon-cplusplus-plain colored"></i>
+      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-swift-plain-wordmark colored"></i>
+      <p>Bilingual in tech.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div> -->
+      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+      <i class="devicon-git-plain colored"></i>
+      <i class="devicon-linux-plain colored"></i>
+      <i class="devicon-redhat-plain-wordmark colored"></i>
+      <i class="devicon-windows8-original colored"></i>
+      <i class="devicon-apple-original colored"></i>
+      <p>Services & Operating System.</p>
+    </div>
 </div>
