Added HH Project
Added C# and HH Project

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,16 +8,17 @@
       <i class="devicon-trello-plain-wordmark colored"></i>
       <i class="devicon-slack-plain-wordmark colored"></i>
       <i class="devicon-confluence-plain colored"></i>
-      <p>Core applications for making things happen.</p>
+      <p>Core applications for managing projects.</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
+      <i class="devicon-java-plain-wordmark colored"></i>
       <i class="devicon-c-plain colored"></i>
       <i class="devicon-cplusplus-plain colored"></i>
-      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-csharp-plain colored"></i>
       <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-swift-plain-wordmark colored"></i>
-      <p>Bilingual in tech.</p>
+      <p>Multilingual in code.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
@@ -27,6 +28,6 @@
       <i class="devicon-redhat-plain-wordmark colored"></i>
       <i class="devicon-windows8-original colored"></i>
       <i class="devicon-apple-original colored"></i>
-      <p>Services & Operating System.</p>
+      <p>Services & Operating Systems.</p>
     </div>
 </div>
