--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,10 +4,10 @@
 
 
 <div class="user-projects">
-  <div class="images-right">
+  <div class="images-left">
     <img alt="RISCV" src="{{ "/assets/img/RISCV.jpg" | prepend: site.baseurl }}" />
   </div>
-  <div class="contents">
+  <div class="contents-right">
     <h3> Front-End Design for RISC-V Microcontroller Application-Specific Integrated Circuit (ASIC) </h3>
     <ul>
       <li> Verilog Hardware Description Language </li>
@@ -19,6 +19,22 @@
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="Hack Harassment" src="{{ "/assets/img/HackHarassment.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Hack Harassment Alexa Skill </h3>
+    <ul>
+      <li> Neural Networks </li>
+      <li> Amazon Web Services</li>
+      <li> Python Coding Language </li>
+    </ul>
+    <p>Our hack uses a neural network which is trained to identify potential harassment by utilizing static semantic analysis. To help demonstrate the network, it was implemented onto an Amazon Echo. Upon using the Echo's wake word and asking for "Harassment Monitor", the Echo will listen silently in the background for any words spoken and forward them into the neural network. If the network deems that the conversation could be considered harassment, the user is notified by Alexa and an e-mail and an SMS text message is sent to the supplied contact. We hope that by catching harassment and reporting it, the spread of it can be prevented for the greater good of society.</p>
+    <a class="project-link" href="https://github.com/hdubel94/Hack2017">Check it out</a>
+  </div>
+</div>
+
 
 <div class="user-projects">
   <div class="images-left">
@@ -27,11 +43,11 @@
   <div class="contents-right">
     <h3> The Indie Accord </h3>
     <ul>
-      <li>Project Management</li>
-      <li>Agile Methodology</li>
-      <li>Unity 3D</li>
+      <li> Project Management </li>
+      <li> Agile Methodology </li>
+      <li> Unity 3D </li>
     </ul>
-    <p><i>The Games of Today, Tomorrow!</i>
+    <p><i> The Games of Today, Tomorrow!</i>
       <br>
     Project management experience with an agile development team. We build and maintain relations with both internal and external conections. Organize and manage standup meetings and performs the role of scrum master of our kanban board task list.</p>
     <a class="project-link" href="http://theindieaccord.com">Check it out</a>
