--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,7 @@
         <a aria-label="My Twitter" target="_blank" href="http://twitter.com/hDubel"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="My LinkedIn" target="_blank" href="http://www.linkedin.com/in/hunter-dubel/"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="http://github.com/hdubel94"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="My Devpost" target="_blank" href="https://devpost.com/hdubel94"><i class="icon fa fa-code" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
