--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,7 @@
       <li> Python Coding Language </li>
     </ul>
     <p>Our hack uses a neural network which is trained to identify potential harassment by utilizing static semantic analysis. To help demonstrate the network, it was implemented onto an Amazon Echo. Upon using the Echo's wake word and asking for "Harassment Monitor", the Echo will listen silently in the background for any words spoken and forward them into the neural network. If the network deems that the conversation could be considered harassment, the user is notified by Alexa and an e-mail and an SMS text message is sent to the supplied contact. We hope that by catching harassment and reporting it, the spread of it can be prevented for the greater good of society.</p>
-    <a class="project-link" href="https://github.com/hdubel94/Hack2017">Check it out</a>
+    <a class="project-link" href="https://github.com/hdubel94/Harassment-Monitor">Check it out</a>
   </div>
 </div>
 
