Added Node & React, Docker, and various other tools and tech. Added AbleHome project. Updated About Me to include work

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,33 +1,40 @@
  <div class="user-details">
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
+  <h2> Experience </h2>
+  <img alt="Sparta Systems" title="Sparta Systems" height="200px" src="{{ "/assets/img/Sparta.png" | prepend: site.baseurl }}" />
+  <img alt="iCIMS" title="iCIMS" height="200px" src="{{ "/assets/img/iCims.png" | prepend: site.baseurl }}" />
+  <p>Experience as a DevOps Engineer in the Amazon Web Services environment. Familiar with automation tools such as Jenkins, Docker, and Ansible.</p>
 </div>
+
   <div class="user">
     <div class="tech">
-      <h2>Organization</h2>
-      <i class="devicon-trello-plain-wordmark colored"></i>
-      <i class="devicon-slack-plain-wordmark colored"></i>
-      <i class="devicon-confluence-plain colored"></i>
-      <p>Core applications for managing projects.</p>
+      <h2>Tools</h2>
+      <i alt="Trello" title="Trello" class="devicon-trello-plain-wordmark colored"></i>
+      <i alt="Slack" title="Slack" class="devicon-slack-plain-wordmark colored"></i>
+      <i alt="Confluence" title="Confluence" class="devicon-confluence-plain colored"></i>
+      <i alt="Docker" title="Docker" class="devicon-docker-plain-wordmark colored"></i>
+      <i alt="Git" title="Git" class="devicon-git-plain colored"></i>
+      <i alt="Bitbucket" title="Bitbucket" class="devicon-bitbucket-plain-wordmark colored"></i>
     </div>
     <div class="tech">
       <h2>Code</h2>
-      <i class="devicon-java-plain-wordmark colored"></i>
-      <i class="devicon-c-plain colored"></i>
-      <i class="devicon-cplusplus-plain colored"></i>
-      <i class="devicon-csharp-plain colored"></i>
-      <i class="devicon-python-plain-wordmark colored"></i>
-      <i class="devicon-swift-plain-wordmark colored"></i>
-      <p>Multilingual in code.</p>
+      <i alt="Java" title="Java" class="devicon-java-plain-wordmark colored"></i>
+      <i alt="C" title="C" class="devicon-c-plain colored"></i>
+      <i alt="C++" title="C++" class="devicon-cplusplus-plain colored"></i>
+      <i alt="C#" title="C#" class="devicon-csharp-plain colored"></i>
+      <i alt="Python" title="Python" class="devicon-python-plain-wordmark colored"></i>
+      <i alt="MySQL" title="MySQL" class="devicon-mysql-plain-wordmark colored"></i>
+      <i alt="Nodejs" title="Nodejs" class="devicon-nodejs-plain-wordmark colored"></i>
+      <i alt="Reactjs" title="Reactjs" class="devicon-react-original-wordmark colored"></i>
+      <i alt="Swift" title="Swift" class="devicon-swift-plain-wordmark colored"></i>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
-      <i class="devicon-git-plain colored"></i>
-      <i class="devicon-linux-plain colored"></i>
-      <i class="devicon-redhat-plain-wordmark colored"></i>
-      <i class="devicon-windows8-original colored"></i>
-      <i class="devicon-apple-original colored"></i>
-      <p>Services & Operating Systems.</p>
+      <h2>Systems</h2>
+      <i alt="AWS" title="AWS" class="devicon-amazonwebservices-plain-wordmark colored"></i>
+      <i alt="Linux" title="Linux" class="devicon-linux-plain colored"></i>
+      <i alt="Redhat/CentOS" title="Redhat/CentOS" class="devicon-redhat-plain-wordmark colored"></i>
+      <i alt="Windows" title="Windows" class="devicon-windows8-original colored"></i>
+      <i alt="MacOS" title="MacOS" class="devicon-apple-original colored"></i>
     </div>
 </div>
