--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,21 @@
   <h1> Featured Projects </h1>
 </div>
 
+<div class="user-projects">
+  <div class="images-right">
+    <img alt="AbleHome" src="{{ "/assets/img/ableHome.png" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> AbleHome </h3>
+    <ul>
+      <li> Internet of Things </li>
+      <li> Amazon Web Services</li>
+      <li> Myo Armband </li>
+    </ul>
+    <p>A framework that enhances in-home accessibility by enabling gesture control of smart home devices</p>
+    <a class="project-link" href="https://devpost.com/software/ablehome">Check it out</a>
+  </div>
+</div>
 
 <div class="user-projects">
   <div class="images-left">
@@ -20,7 +35,7 @@
 </div>
 
 <div class="user-projects">
-  <div class="images-left">
+  <div class="images-right">
     <img alt="Hack Harassment" src="{{ "/assets/img/HackHarassment.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
@@ -31,7 +46,7 @@
       <li> Python Coding Language </li>
     </ul>
     <p>Our hack uses a neural network which is trained to identify potential harassment by utilizing static semantic analysis. To help demonstrate the network, it was implemented onto an Amazon Echo. Upon using the Echo's wake word and asking for "Harassment Monitor", the Echo will listen silently in the background for any words spoken and forward them into the neural network. If the network deems that the conversation could be considered harassment, the user is notified by Alexa and an e-mail and an SMS text message is sent to the supplied contact. We hope that by catching harassment and reporting it, the spread of it can be prevented for the greater good of society.</p>
-    <a class="project-link" href="https://github.com/hdubel94/Harassment-Monitor">Check it out</a>
+    <a class="project-link" href="https://devpost.com/software/harassment-monitor">Check it out</a>
   </div>
 </div>
 
