--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,10 +1,39 @@
  <div class="user-details">
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
+  <img 
+    src="https://icongr.am/material/raspberrypi.svg" 
+    alt="Raspberry Pi & Arduino"
+    height="87px"
+    width="100px" 
+  />
+  <img 
+    src="https://icongr.am/material/printer-3d.svg" 
+    alt="3D Printer"
+    height="87px"
+    width="100px" 
+  />
+  <img 
+    src="https://icongr.am/material/drone.svg" 
+    alt="Drone"
+    height="87px"
+    width="100px" 
+  />
+  <img 
+    src="https://icongr.am/material/gamepad-variant.svg" 
+    alt="Game Development"
+    height="87px"
+    width="100px" 
+  />
+
   <h2> Experience </h2>
-  <img alt="Sparta Systems" title="Sparta Systems" height="200px" src="{{ "/assets/img/Sparta.png" | prepend: site.baseurl }}" />
-  <img alt="iCIMS" title="iCIMS" height="200px" src="{{ "/assets/img/iCims.png" | prepend: site.baseurl }}" />
-  <p>Experience as a DevOps Engineer in the Amazon Web Services environment. Familiar with automation tools such as Jenkins, Docker, and Ansible.</p>
+  <a href="https://www.spartasystems.com/">
+    <img alt="Sparta Systems" title="Sparta Systems" height="200px" src="{{ "/assets/img/Sparta.png" | prepend: site.baseurl }}" />
+  </a>
+  <a href="https://www.icims.com/">
+    <img alt="iCIMS" title="iCIMS" height="200px" src="{{ "/assets/img/iCims.png" | prepend: site.baseurl }}" />
+  </a>
+  <p>DevOps engineer with experience with the Amazon Web Services ecosystem and Continuous Integration/Continuous Deployment. Familiar with automation tools such as Jenkins, Docker, and Ansible.</p>
 </div>
 
   <div class="user">
@@ -16,18 +45,26 @@
       <i alt="Docker" title="Docker" class="devicon-docker-plain-wordmark colored"></i>
       <i alt="Git" title="Git" class="devicon-git-plain colored"></i>
       <i alt="Bitbucket" title="Bitbucket" class="devicon-bitbucket-plain-wordmark colored"></i>
+      <img 
+        src="https://icongr.am/material/unity.svg" 
+        alt="Unity Engine"
+        height="87px"
+        width="100px" 
+      />
+
     </div>
     <div class="tech">
       <h2>Code</h2>
       <i alt="Java" title="Java" class="devicon-java-plain-wordmark colored"></i>
+      <i alt="JavaScript" title="JavaScript" class="devicon-javascript-plain"></i>
       <i alt="C" title="C" class="devicon-c-plain colored"></i>
       <i alt="C++" title="C++" class="devicon-cplusplus-plain colored"></i>
       <i alt="C#" title="C#" class="devicon-csharp-plain colored"></i>
       <i alt="Python" title="Python" class="devicon-python-plain-wordmark colored"></i>
       <i alt="MySQL" title="MySQL" class="devicon-mysql-plain-wordmark colored"></i>
       <i alt="Nodejs" title="Nodejs" class="devicon-nodejs-plain-wordmark colored"></i>
-      <i alt="Reactjs" title="Reactjs" class="devicon-react-original-wordmark colored"></i>
-      <i alt="Swift" title="Swift" class="devicon-swift-plain-wordmark colored"></i>
+      <i alt="ReactJS" title="ReactJS" class="devicon-react-original-wordmark colored"></i>
+
     </div>
     <div class="tech">
       <h2>Systems</h2>
