--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,22 @@
 </div>
 
 <div class="user-projects">
+  <div class="images-left">
+    <img alt="Circumference BMW HR Solution" src="{{ "/assets/img/BMWLogo.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Circumference: BMW Human Resources Solution </h3>
+    <ul>
+      <li> JavaScript (ReactJS | ExpressJS) & Material Design Bootstrap</li>
+      <li> Project Management | Scrum Master | Agile Development</li>
+      <li> DevOps Methodologies | Docker </li>
+    </ul>
+    <p>A personalized system for tracking and maintaining employee information. Built using ReactJS frontend, ExpressJS backend, and a MySQL database. </p>
+    <p>Worked as the project managaer and scrum master for a team of 6 students at Monmouth University for their Master's Practicum project.</p>
+  </div>
+</div>
+
+<div class="user-projects">
   <div class="images-right">
     <img alt="AbleHome" src="{{ "/assets/img/ableHome.png" | prepend: site.baseurl }}" />
   </div>
@@ -13,14 +29,15 @@
       <li> Amazon Web Services</li>
       <li> Myo Armband </li>
     </ul>
-    <p>A framework that enhances in-home accessibility by enabling gesture control of smart home devices</p>
+    <p>A framework that enhances in-home accessibility by enabling gesture control of smart home devices.</p>
+    <p>Winner of HackTCNJ 2018 Best Hardware Hack.</p>
     <a class="project-link" href="https://devpost.com/software/ablehome">Check it out</a>
   </div>
 </div>
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="RISCV" src="{{ "/assets/img/RISCV.jpg" | prepend: site.baseurl }}" />
+    <img alt="RISC-V" src="{{ "/assets/img/RISCV.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Front-End Design for RISC-V Microcontroller Application-Specific Integrated Circuit (ASIC) </h3>
@@ -30,7 +47,7 @@
       <li> Project Management </li>
     </ul>
     <p>We designed a general purpose RISC-V based chip for educational purposes. The chip is able to load and execute code compiled to RISC-V machine language by a separate computer. The chip has 16 General Purpose Input Output pins that can be used for interaction.</p>
-    <a class="project-link" href="http://frontendchip2017.pages.tcnj.edu/">Check it out</a>
+    <a class="project-link" href="https://github.com/richlvnsn/tcnj_ic2">View on GitHub</a>
   </div>
 </div>
 
@@ -46,6 +63,7 @@
       <li> Python Coding Language </li>
     </ul>
     <p>Our hack uses a neural network which is trained to identify potential harassment by utilizing static semantic analysis. To help demonstrate the network, it was implemented onto an Amazon Echo. Upon using the Echo's wake word and asking for "Harassment Monitor", the Echo will listen silently in the background for any words spoken and forward them into the neural network. If the network deems that the conversation could be considered harassment, the user is notified by Alexa and an e-mail and an SMS text message is sent to the supplied contact. We hope that by catching harassment and reporting it, the spread of it can be prevented for the greater good of society.</p>
+    <p>Winner of Hack TCNJ 2017 Best Hardware Hack.</p>
     <a class="project-link" href="https://devpost.com/software/harassment-monitor">Check it out</a>
   </div>
 </div>
