Add Certs & Tools

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
   <img 
-    src="https://icongr.am/material/raspberrypi.svg" 
+    src="https://icongr.am/material/raspberry-pi.svg" 
     alt="Raspberry Pi & Arduino"
     height="87px"
     width="100px" 
@@ -34,8 +34,20 @@
     <img alt="iCIMS" title="iCIMS" height="200px" src="{{ "/assets/img/iCims.png" | prepend: site.baseurl }}" />
   </a>
   <p>DevOps engineer with experience with the Amazon Web Services ecosystem and Continuous Integration/Continuous Deployment. Familiar with automation tools such as Jenkins, Docker, and Ansible.</p>
+  <h3> Certifications & Badges</h3>
+  <a href="https://aws.amazon.com/education/awseducate/">
+    <img alt="AWS Software Engineer Badge" title="AWS Software EngineerBadge " height="100px" src="{{ "https://www.awseducate.com/student/resource/AWSEd_Resource/img/digitalcredentials/sw-eng.png" }}" />
+  </a>
+  <a href="https://aws.amazon.com/education/awseducate/">
+    <img alt="AWS DevOps Engineer Badge" title="AWS DevOps Engineer Badge" height="100px" src="{{ "https://www.awseducate.com/student/resource/AWSEd_Resource/img/digitalcredentials/dev-ops-eng.png" }}" />
+  </a>
+  <a href="https://aws.amazon.com/education/awseducate/">
+    <img alt="AWS Startup Badge" title="AWS Startup Badge" height="100px" src="{{ "https://www.awseducate.com/student/resource/AWSEd_Resource/img/startUps.jpeg" }}" />
+  </a>
+  <a href="https://www.scaledagile.com/enterprise-solutions/what-is-safe/">
+    <img alt="SAFe Scrum Master" title="SAFe Scrum Master" height="100px" src="{{ "/assets/img/cert_mark_SSM_large_300px.png" | prepend: site.baseurl }}" />
+  </a>
 </div>
-
   <div class="user">
     <div class="tech">
       <h2>Tools</h2>
@@ -45,6 +57,18 @@
       <i alt="Docker" title="Docker" class="devicon-docker-plain-wordmark colored"></i>
       <i alt="Git" title="Git" class="devicon-git-plain colored"></i>
       <i alt="Bitbucket" title="Bitbucket" class="devicon-bitbucket-plain-wordmark colored"></i>
+      <img 
+      src="https://logos-download.com/wp-content/uploads/2016/10/Ansible_logo-700x700.png" 
+      alt="Ansible"
+      height="76px"
+      width="76px" 
+      />
+      <img 
+      src="https://wiki.jenkins.io/download/attachments/2916393/logo.png?version=1&modificationDate=1302753947000&api=v2" 
+      alt="Jenkins"
+      height="100px"
+      width="76px" 
+      />
       <img 
         src="https://icongr.am/material/unity.svg" 
         alt="Unity Engine"
