--- a/_includes/about.html
+++ b/_includes/about.html
@@ -47,6 +47,9 @@
   <a href="https://www.scaledagile.com/enterprise-solutions/what-is-safe/">
     <img alt="SAFe Scrum Master" title="SAFe Scrum Master" height="100px" src="{{ "/assets/img/cert_mark_SSM_large_300px.png" | prepend: site.baseurl }}" />
   </a>
+  <a href="https://docs.microsoft.com/en-us/learn/certifications/exams/az-900?wt.mc_id=learningredirect_certs-web-wwl">
+    <img alt="Azure Fundamentals Certified" title="Azure Fundamentals" height="100px" src="{{ "/assets/img/azure-fundamentals-600x600.png" | prepend: site.baseurl }}" />
+  </a>
 </div>
   <div class="user">
     <div class="tech">
