Add SAFe 5 Badge & Edit website

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -45,7 +45,10 @@
     <img alt="AWS Startup Badge" title="AWS Startup Badge" height="100px" src="{{ "https://www.awseducate.com/student/resource/AWSEd_Resource/img/startUps.jpeg" }}" />
   </a>
   <a href="https://www.scaledagile.com/enterprise-solutions/what-is-safe/">
-    <img alt="SAFe Scrum Master" title="SAFe Scrum Master" height="100px" src="{{ "/assets/img/cert_mark_SSM_large_300px.png" | prepend: site.baseurl }}" />
+    <img alt="Certified SAFe 4 Scrum Master" title="SAFe 4 Scrum Master" height="100px" src="{{ "/assets/img/cert_mark_SSM_large_300px.png" | prepend: site.baseurl }}" />
+  </a>
+  <a href="https://www.scaledagile.com/enterprise-solutions/what-is-safe/">
+    <img alt="Certified SAFe 5 Scrum Master" title="SAFe 5 Scrum Master" height="100px" src="{{ "/assets/img/cert_mark_SSM_badge_large_300px.png" | prepend: site.baseurl }}" />
   </a>
   <a href="https://docs.microsoft.com/en-us/learn/certifications/exams/az-900?wt.mc_id=learningredirect_certs-web-wwl">
     <img alt="Azure Fundamentals Certified" title="Azure Fundamentals" height="100px" src="{{ "/assets/img/azure-fundamentals-600x600.png" | prepend: site.baseurl }}" />
