Add Prot to webbie

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,10 +28,13 @@
 
   <h2> Experience </h2>
   <a href="https://www.spartasystems.com/">
-    <img alt="Sparta Systems" title="Sparta Systems" height="200px" src="{{ "/assets/img/Sparta.png" | prepend: site.baseurl }}" />
+    <img alt="Sparta Systems" title="Sparta Systems" height="150px" src="{{ "/assets/img/Sparta.png" | prepend: site.baseurl }}" />
   </a>
   <a href="https://www.icims.com/">
-    <img alt="iCIMS" title="iCIMS" height="200px" src="{{ "/assets/img/iCims.png" | prepend: site.baseurl }}" />
+    <img alt="iCIMS" title="iCIMS" height="150px" src="{{ "/assets/img/iCims.png" | prepend: site.baseurl }}" />
+  </a>
+  <a href="https://www.protiviti.com/US-en">
+    <img alt="Protiviti" title="Protiviti" height="150px" src="{{ "/assets/img/protiviti.png" | prepend: site.baseurl }}" />
   </a>
   <p>DevOps engineer with experience with the Amazon Web Services ecosystem and Continuous Integration/Continuous Deployment. Familiar with automation tools such as Jenkins, Docker, and Ansible.</p>
   <h3> Certifications & Badges</h3>
